Added graphing for min/avg fitness, fixed a bug with fitness for uncached values)